# 3Dbuntu

./: CMakeLists.txt  README.md  build.sh  clean.sh  conanfile.txt
src/: MainWindow.cpp  MainWindow.hpp  main.cpp
